--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,33 @@
     <title>Document</title>
   </head>
   <body>
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-app.js"></script>
+
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+    https://firebase.google.com/docs/web/setup#available-libraries -->
+    <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-firestore.js"></script>
+
+    <script>
+      // Your web app's Firebase configuration
+      var firebaseConfig = {
+        apiKey: "AIzaSyDwlWmN6OxM1UeFacVyTDKl1CH7mPMGYfA",
+        authDomain: "rede-social-f3194.firebaseapp.com",
+        projectId: "rede-social-f3194",
+        storageBucket: "rede-social-f3194.appspot.com",
+        messagingSenderId: "984165130148",
+        appId: "1:984165130148:web:bba06cd63f16f5a3aaab31"
+      };
+      // Initialize Firebase
+      firebase.initializeApp(firebaseConfig);
+    </script>
+
     <nav>
       <ul>
         <li id='home'>Home</li>
         <li id='login'>Login</li>
+        <li id='register'>Cadastre-se</li>
       </ul>
     </nav>
     <div id="root"></div>
