cria usuários e faz login com firebase

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="./style.css">
-    <title>Document</title>
+    <title>Rede Social</title>
   </head>
   <body>
     <!-- The core Firebase JS SDK is always required and must be listed first -->
@@ -16,19 +16,7 @@
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-firestore.js"></script>
 
-    <script>
-      // Your web app's Firebase configuration
-      var firebaseConfig = {
-        apiKey: "AIzaSyDwlWmN6OxM1UeFacVyTDKl1CH7mPMGYfA",
-        authDomain: "rede-social-f3194.firebaseapp.com",
-        projectId: "rede-social-f3194",
-        storageBucket: "rede-social-f3194.appspot.com",
-        messagingSenderId: "984165130148",
-        appId: "1:984165130148:web:bba06cd63f16f5a3aaab31"
-      };
-      // Initialize Firebase
-      firebase.initializeApp(firebaseConfig);
-    </script>
+    <script src="./services/firebase-config.js"></script>
 
     <nav>
       <ul>
