--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,8 @@
 
     <script>
       // Your web app's Firebase configuration
-      var firebaseConfig = {
+      // O trecho abaixo, talvez vá para o arquivo firebaserc ou firebase.json
+      let firebaseConfig = {
         apiKey: "AIzaSyDwlWmN6OxM1UeFacVyTDKl1CH7mPMGYfA",
         authDomain: "rede-social-f3194.firebaseapp.com",
         projectId: "rede-social-f3194",
