--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,13 @@
         <li id='register'>Cadastre-se</li>
       </ul>
     </nav>
-    <div id="root"></div>
-    <script type="module" src="router.js"></script>
+      <div id="root"></div>
+        <script type="module" src="router.js"></script>
+        <div class='footer'>
+          <footer>
+          Desenvolvido por <a href='https://github.com/letbrasil'>Letícia Brasileiro</a>
+          e <a href="https://github.com/Juliane-C">Juliane Cristina</a>.
+          </footer>
+        </div>
   </body>
 </html>
