corrige funções de curtir, editar e apagar posts

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="./style.css">
-    <title>Rede Social</title>
+    <title>Pronto, postei!</title>
   </head>
   <body>
     <!-- The core Firebase JS SDK is always required and must be listed first -->
@@ -25,13 +25,13 @@
         <li id='register'>Cadastre-se</li>
       </ul>
     </nav>
-      <div id="root"></div>
-        <div class='footer'>
-          <footer>
-          Desenvolvido por <a href='https://github.com/letbrasil'>Letícia Brasileiro</a>
-          e <a href="https://github.com/Juliane-C">Juliane Cristina</a>.
-          </footer>
-        </div>
-      <script type="module" src="router.js"></script>
+    <div id="root"></div>
+    <div class='footer'>
+      <footer>
+      Desenvolvido por <a href='https://github.com/letbrasil'>Letícia Brasileiro</a>
+      e <a href="https://github.com/Juliane-C">Juliane Cristina</a>.
+      </footer>
+    </div>
+    <script type="module" src="router.js"></script>
   </body>
 </html>
