--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,7 @@
         <li id='home'>Home</li>
         <li id='login'>Login</li>
         <li id='register'>Cadastre-se</li>
+        <!-- <li id='feed'>Feed</li> -->
       </ul>
     </nav>
     <div id="root"></div>
