--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="./style.css">
-    <title>Pronto, postei!</title>
+    <title>Ideias para curtir 😁</title>
   </head>
   <body>
     <!-- The core Firebase JS SDK is always required and must be listed first -->
